--- a/Test3/Web.config
+++ b/Test3/Web.config
@@ -51,7 +51,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="Model1" connectionString="data source=sqlserver;initial catalog=StokAppDb2;user id=sa;password=@Controller0221@" providerName="System.Data.SqlClient" />
+    <add name="Model1" connectionString="data source=***;initial catalog=StokAppDb2;user id=***;password=***" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
