--- a/Test3/Web.config
+++ b/Test3/Web.config
@@ -50,9 +50,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <connectionStrings>
-    <add name="Model1" connectionString="data source=sqlserver;initial catalog=StokAppDb2;user id=sa;password=@Controller0221@" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <connectionStrings configSource="Sifre.Config"/>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
