--- a/Test3/Test3.csproj
+++ b/Test3/Test3.csproj
@@ -224,7 +224,7 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
-    <None Include="Sifre.config" />
+    <Content Include="Sifre.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
