--- a/Test3/Web.config
+++ b/Test3/Web.config
@@ -50,7 +50,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <connectionStrings configSource="Sifre.Config"/>
+  <connectionStrings>
+    <add name="Model1" connectionString="data source=sqlserver;initial catalog=StokAppDb2;user id=sa;password=@Controller0221@" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
